spacing fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,7 @@ box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
 .header {
     border-radius: 2px 3px 0 0;
     height: 20px;
-    margin-top: 7px;
+    margin-top: 10px;
     position: relative;
     z-index: 99;
 }
